# ngx-bootstrap

./: .CHANGELOG.md.swp  .angular-cli.json  .bazelignore  .bazelrc  .editorconfig  .env.template  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .npmrc  .prettierrc  .travis.yml  .travis.yml.old  0.3f7e3ffbc37164d709ca.js  10.dcdee47d28cdc9741a4d.js  10.e3366c3ad1c9a72e6e5d.js  11.2f71ba77179c2e3a.js  11.3c97f64741e72e1a.js  11.8574a0ad1d4745615fcc.js  11.86a5e19f1f82812ddd09.js  11.fd8841aa286317f7c115.js  117.3c4e6954d82cfade.js  117.6e2be7fed3733705.js  12.3172cb4859d261b94d46.js  12.411745614bb911713fd1.js  120.95a2edca9f15be88.js  126.3e921f50e6795b4b.js  126.cd07483a4d8508aa.js  128.js  13.7e9b4d6309d3d26f3c8e.js  13.a9c6774dcc4238b84eea.js  136.d54fca0cd33d2c56.js  14.33a4d4867ae36cba8007.js  141.159c5d3a0da4331e.js  15.bdb8509eb1f44e09fddc.js  15.da199e16f7c9c3d7ab90.js  15.fcd98f39c53135ed813d.js  16.13db07bf01cb28192a65.js  (+245 more)
src/: BUILD.bazel  baseline.spec.ts  common.js  core.ts  index.html  index.ts  locale.ts  ng2-bootstrap.ts  package.json  position.ts  tsconfig.json  tsconfig.publish.json  tsconfig.spec.json
src/accordion/: .eslintrc.json  README.md  accordion-animations.ts  accordion-group.component.html  accordion-group.component.ts  accordion.component.spec.ts  accordion.component.ts  accordion.config.ts  accordion.module.ts  accordion.scss  fade-animations.component.ts  index.ts  jest.config.js  jest.config.ts  ng-package.json  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
src/alert/: .eslintrc.json  README.md  alert.component.html  alert.component.spec.ts  alert.component.ts  alert.config.ts  alert.module.ts  index.ts  jest.config.js  jest.config.ts  ng-package.json  package.json  project.json  public_api.ts
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.routing.ts
src/bs-moment/: LICENSE  format-functions.ts  format.ts  index.ts  parse.ts  todo.txt  types.ts  utils.ts
src/buttons/: .eslintrc.json  README.md  button-checkbox.directive.ts  button-radio-group.directive.ts  button-radio.directive.ts  button.directive.spec.ts  buttons.module.ts  index.ts  jest.config.js  jest.config.ts  ng-package.json  package.json  project.json  tsconfig.spec.json
src/carousel/: .eslintrc.json  README.md  carousel.component.html  carousel.component.spec.ts  carousel.component.ts  carousel.config.ts  carousel.module.ts  index.ts  jest.config.js  jest.config.ts  ng-package.json  package.json  project.json  public_api.ts  (+3 more)
(+5875 files in other folders)
