load("@angular//:index.bzl", "ng_module", "ng_package" )

package(default_visibility=["//visibility:public"])

# Root "@ngx-bootstrap" entry-point.
ng_module(
    name = "ngx-bootstrap",
    srcs = glob(["*.ts"]),
    module_name = "@ngx-bootstrap",
    deps = [
      "@angular//packages/core",
    ]
)

# Creates the @ngx-bootstrap package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/index.js",
  entry_point_name = "ngx-bootstrap",
#  deps = NGX_BOOTSTRAP_TARGET,
  # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
  tags = ["manual"],
)
