load("@angular//:index.bzl", "ng_module", "ng_package" )
load("@my_test_rules//:defs.bzl", "npm_package")
#load("@my_test_rules//:defs.bzl", "nodejs_binary")

package(default_visibility=["//visibility:public"])

# Root "@ngx-bootstrap" entry-point.
ng_module(
    name = "ngx-bootstrap",
#    srcs = glob(
#      include = ["**/*.ts", "*.ts"],
#      exclude = ["main.ts","**/*.spec.ts"]
#    ),
    srcs = ["index.ts","locale.ts"],
#    tsconfig = "//:tsconfig.json",
    deps = [
      "@npm//tslib",
      "@npm//@types",
      "@angular//packages/core",
    ]
)

# Creates the @ngx-bootstrap package published to npm.
npm_package(
  name = "npm_package",
  srcs = ["//:package.json"],
  deps = [":ngx-bootstrap"],
  replacements = {"//internal/": "//"},
)


#ng_package(
#  name = "npm-package",
#  srcs = ["//:package.json"],
#  entry_point = "src/index.js",
#  entry_point_name = "ngx-bootstrap",
#  deps = NGX_BOOTSTRAP_TARGET,
  # TODO(devversion): Use the npm package for publishing. Right now this is disabled because
  # we build using AOT for serving & testing, but the `ng_package` rule should not include factory
  # files.
#  tags = ["manual"],
#)


#ng_package(
#    name = "npm-package",
#    deps = [":ngx-bootstrap",],
#    srcs = ["//:package.json"],
#    globals = ROLLUP_GLOBALS,
#    entry_point = "index.js",
#    entry_point_name = PACKAGE_NAME,
#)
#
#
#nodejs_binary(
#    name = "@angular/bazel/ngc-wrapped",
#    configuration_env_vars = ["compile"],
#    data = ["@npm//@angular/bazel"],
#    entry_point = "@angular/bazel/src/ngc-wrapped/index.js",
#    install_source_map_support = False,
#    templated_args = ["--node_options=--expose-gc"],
#)
